--- a/index.html
+++ b/index.html
@@ -146,15 +146,15 @@
   <!-- Main -->
   <main class="container">
     <div class="center-main">
-      <div class="promo clearfix">
-        <div class="promo promo-left">
+      <div class="promolist clearfix">
+        <div class="promo-left">
           <div class="center-promo">
             <div class="promo-title">Малинка даром!</div>
             <p>При покупке 2 кг любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно.</p>
             <a href="#" class="red-btn">Хочу варенье!</a>
           </div>
         </div>
-        <div class="promo promo-right">
+        <div class="promo-right">
           <div class="center-promo">
             <div class="promo-title">Шоколадки даром!</div>
             <p>При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно.</p>
@@ -162,7 +162,7 @@
           </div>
         </div>
       </div>
-      <div class="goods clearfix">
+      <div class="goods">
         <div class="good good-box">
           <div class="good-main"><img src="img/content/orange-cream.png" alt="сливочное">
           </div>
@@ -209,53 +209,57 @@
         </div>
       </div>
       <div class="shop-info">
-        <div class="info-block clearfix">
+        <div class="info-block">
           <h2 class="shop-title">Магазин Глейси — это онлайн и офлайн магазин по продаже мороженого собственного производства на развес</h2>
-          <div class="block-list">
-            <div class="block-left">
+          <div class="blocks">
+            <div class="block-list">
               <p class="shop-text cream-icon">Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.</p>
-              <p class="shop-text leaf-icon">Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья..</p>
             </div>
-            <div class="block-right">
-              <p class="shop-text cow-icon">Закупка ингредиентов производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.</p>
+            <div class="block-list">
+              <p class="shop-text leaf-icon">Закупка ингредиентов производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.</p>
+            </div>
+            <div class="block-list">
+              <p class="shop-text cow-icon">Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья.</p>
+            </div>
+            <div class="block-list">
               <p class="shop-text thermometer-icon">Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, которая не дает мороженому растаять в пути и позволяет ему сохранить свой превосходный вкус.</p>
             </div>
           </div>
-        </div>
-      </div>
-      <div class="new-mail clearfix">
-        <div class="new-block">
-          <div class="shop-info">
-            <img src="img/content/berry.png" alt="сервировка">
+          <div class="new-mail clearfix">
+            <div class="new-block">
+              <div class="shop-berry">
+                <img src="img/content/berry.png" alt="сервировка">
+              </div>
+              <div class="new-title">Новое в нашем блоге</div>
+              <a href="#" class="new-go">10 способов сервировки фруктовых щербетов к столу</a>
+            </div>
+            <div class="mail-block">
+              <p class="mail-text">Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой не нужной ерунды. Честно =)</p>
+              <form class="new-form" action="#" method="post">
+                <input class="uzer-go" type="email" name="email" placeholder="Электронная почта">
+                <button class="red-btn" type="submit">Отправить</button>
+              </form>
+            </div>
           </div>
-          <div class="new-title">Новое в нашем блоге</div>
-          <a href="#" class="new-go">10 способов сервировки фруктовых щербетов к столу</a>
         </div>
-        <div class="mail-block">
-          <p class="mail-text">Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой не нужной ерунды. Честно =)</p>
-          <form class="new-form" action="#" method="post">
-            <input class="uzer-go" type="email" name="email" placeholder="Электронная почта">
-            <button class="red-btn" type="submit">Отправить</button>
-          </form>
-        </div>
-      </div>
-    </div>
-    <div class="map">
-      <div class="map-list"><img src="img/map.jpg" alt="карта">
-        <div class="contact">
-          <p class="contact-text">Адрес главного офиса и
-            <br> офлайн магазина:
-            <span class=" contact-a contact-g">ул. Большая Конюшенная <br> 19/8, Санкт-Петербург
-            </span>Для заказов по телефону:
-            <br>
-            <span class="contact-b contact-g">8 812 450-25-25
-            </span>(с 10 до 20 ежедневно)
-          </p>
-        </div>
-        <a class="red-btn" href="#">Форма обратной связи</a>
       </div>
     </div>
   </main>
+  <div class="map">
+    <div class="map-list"><img src="img/content/map.jpg" alt="карта">
+      <div class="contact">
+        <p class="contact-text">Адрес главного офиса и
+          <br> офлайн магазина:
+          <span class=" contact-a contact-g">ул. Большая Конюшенная <br> 19/8, Санкт-Петербург
+            </span>Для заказов по телефону:
+          <br>
+          <span class="contact-b contact-g">8 812 450-25-25
+            </span>(с 10 до 20 ежедневно)
+        </p>
+        <a class="red-btn" href="#">Форма обратной связи</a>
+      </div>
+    </div>
+  </div>
   <!-- Footer -->
   <footer class="main-footer">
     <div class="container clearfix">
