--- a/inner.html
+++ b/inner.html
@@ -101,13 +101,13 @@
     </div>
   </header>
   <!-- main -->
-  <main class="container clearfix">
-    <ul class="breadcrumbs">
+  <main class="container">
+    <ul class="breadcrumbs clearfix">
       <li><a href="#">Главная</a></li>
       <li><a href="#">Каталог</a></li>
       <li class="active">Сливочное</li>
     </ul>
-    <h1 class="content-title">Сливочное мороженое</h1>
+    <h1 class="content-font">Сливочное мороженое</h1>
     <div class="container-common">
       <div class="container-left">
         <form action="#" method="post">
@@ -205,110 +205,110 @@
             </div>
             <a href="#" class="good-property">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
           </div>
-        </div>
-        <div class="good good-box">
-          <div class="good-main"><img src="img/content/strawberry-cream.png" width="267" height="267" alt="клубничное"></div>
-          <div class="price">
-            <span class="good-price">380</span>
+          <div class="good good-box">
+            <div class="good-main"><img src="img/content/strawberry-cream.png" width="267" height="267" alt="клубничное"></div>
+            <div class="price">
+              <span class="good-price">380</span>
+              <span class="good-rub">&#8381;</span>
+              <span class="good-kg">/кг</span>
+            </div>
+            <a href="#" class="good-property">Сливочно-клубничное с присыпкой из белого шоколада</a>
+          </div>
+          <div class="good good-box">
+            <div class="good-main"><img src="img/content/coffee-cream.png" width="267" height="267" alt="кофейное"></div>
+            <div class="price">
+              <span class="good-price">355</span>
+              <span class="good-rub">&#8381;</span>
+              <span class="good-kg">/кг</span>
+            </div>
+            <a href="#" class="good-property">Сливочно-кофейное с кусочками шоколада</a>
+          </div>
+          <div class="good good-box">
+            <div class="good-main"><img src="img/content/creamy-cream.png" width="267" height="267" alt="крем-брюле"></div>
+            <span class="good-price">415</span>
             <span class="good-rub">&#8381;</span>
             <span class="good-kg">/кг</span>
+            <a href="#" class="good-property">Сливочное крем-брюле с карамельной подливкой</a>
           </div>
-          <a href="#" class="good-property">Сливочно-клубничное с присыпкой из белого шоколада</a>
-        </div>
-        <div class="good good-box">
-          <div class="good-main"><img src="img/content/coffee-cream.png" width="267" height="267" alt="кофейное"></div>
-          <div class="price">
-            <span class="good-price">355</span>
-            <span class="good-rub">&#8381;</span>
-            <span class="good-kg">/кг</span>
+          <div class="good good-box">
+            <div class="good-main"><img src="img/content/cowberry-cream.png" width="267" height="267" alt="брусничное"></div>
+            <div class="price">
+              <span class="good-price">325</span>
+              <span class="good-rub">&#8381;</span>
+              <span class="good-kg">/кг</span>
+            </div>
+            <a href="#" class="good-property">Сливочное с брусничным джемом</a>
           </div>
-          <a href="#" class="good-property">Сливочно-кофейное с кусочками шоколада</a>
-        </div>
-        <div class="good good-box">
-          <div class="good-main"><img src="img/content/creamy-cream.png" width="267" height="267" alt="крем-брюле"></div>
-          <span class="good-price">415</span>
-          <span class="good-rub">&#8381;</span>
-          <span class="good-kg">/кг</span>
-          <a href="#" class="good-property">Сливочное крем-брюле с карамельной подливкой</a>
-        </div>
-        <div class="good good-box">
-          <div class="good-main"><img src="img/content/cowberry-cream.png" width="267" height="267" alt="брусничное"></div>
-          <div class="price">
-            <span class="good-price">325</span>
-            <span class="good-rub">&#8381;</span>
-            <span class="good-kg">/кг</span>
+          <div class="good good-box">
+            <div class="good-main"><img src="img/content/huckleberry-cream.png" width="267" height="267" alt="черничное"></div>
+            <span class="good-price">410</span>
+            <span class="good-rub">&#8381;/кг</span>
+            <a href="#" class="good-property">Сливочно-черничное с цельными ягодами черники</a>
           </div>
-          <a href="#" class="good-property">Сливочное с брусничным джемом</a>
-        </div>
-        <div class="good good-box">
-          <div class="good-main"><img src="img/content/huckleberry-cream.png" width="267" height="267" alt="черничное"></div>
-          <span class="good-price">410</span>
-          <span class="good-rub">&#8381;/кг</span>
-          <a href="#" class="good-property">Сливочно-черничное с цельными ягодами черники</a>
-        </div>
-        <div class="good good-box">
-          <div class="good-main"><img src="img/content/lemon-cream.png" width="267" height="267" alt="лимонное"></div>
-          <div class="price">
-            <span class="good-price">375</span>
-            <span class="good-rub">&#8381;</span>
-            <span class="good-kg">/кг</span>
+          <div class="good good-box">
+            <div class="good-main"><img src="img/content/lemon-cream.png" width="267" height="267" alt="лимонное"></div>
+            <div class="price">
+              <span class="good-price">375</span>
+              <span class="good-rub">&#8381;</span>
+              <span class="good-kg">/кг</span>
+            </div>
+            <a href="#" class="good-property">Сливочно-лимонное с карамельной присыпкой</a>
           </div>
-          <a href="#" class="good-property">Сливочно-лимонное с карамельной присыпкой</a>
-        </div>
-        <div class="good good-box">
-          <div class="good-main"><img src="img/content/chip-cream.png" width="267" height="267" alt="карамельное"></div>
-          <div class="price">
-            <span class="good-price">320</span>
-            <span class="good-rub">&#8381;</span>
-            <span class="good-kg">/кг</span>
+          <div class="good good-box">
+            <div class="good-main"><img src="img/content/chip-cream.png" width="267" height="267" alt="карамельное"></div>
+            <div class="price">
+              <span class="good-price">320</span>
+              <span class="good-rub">&#8381;</span>
+              <span class="good-kg">/кг</span>
+            </div>
+            <a href="#" class="good-property">Сливочное с шоколадной стружкой</a>
           </div>
-          <a href="#" class="good-property">Сливочное с шоколадной стружкой</a>
-        </div>
-        <div class="good good-box">
-          <div class="good-main"><img src="img/content/vanilla-cream.png" width="267" height="267" alt="ванильное"></div>
-          <div class="price">
-            <span class="good-price">440</span>
-            <span class="good-rub">&#8381;</span>
-            <span class="good-kg">/кг</span>
+          <div class="good good-box">
+            <div class="good-main"><img src="img/content/vanilla-cream.png" width="267" height="267" alt="ванильное"></div>
+            <div class="price">
+              <span class="good-price">440</span>
+              <span class="good-rub">&#8381;</span>
+              <span class="good-kg">/кг</span>
+            </div>
+            <a href="#" class="good-property">Сливочно-ванильное с кусочками шоколада</a>
           </div>
-          <a href="#" class="good-property">Сливочно-ванильное с кусочками шоколада</a>
-        </div>
-        <div class="good good-box">
-          <div class="good-main"><img src="img/content/menthol-cream.png" width="267" height="267" alt="ментол"></div>
-          <div class="price">
-            <span class="good-price">435</span>
-            <span class="good-rub">&#8381;</span>
-            <span class="good-kg">/кг</span>
+          <div class="good good-box">
+            <div class="good-main"><img src="img/content/menthol-cream.png" width="267" height="267" alt="ментол"></div>
+            <div class="price">
+              <span class="good-price">435</span>
+              <span class="good-rub">&#8381;</span>
+              <span class="good-kg">/кг</span>
+            </div>
+            <a href="#" class="good-property">Сливочноe с ментоловым сиропом</a>
           </div>
-          <a href="#" class="good-property">Сливочноe с ментоловым сиропом</a>
-        </div>
-        <div class="good good-box">
-          <div class="good-main"><img src="img/content/chocolate-cream.png" alt="шоколадное"></div>
-          <div class="price">
-            <span class="good-price">355</span>
-            <span class="good-rub">&#8381;</span>
-            <span class="good-kg">/кг</span>
+          <div class="good good-box">
+            <div class="good-main"><img src="img/content/chocolate-cream.png" alt="шоколадное"></div>
+            <div class="price">
+              <span class="good-price">355</span>
+              <span class="good-rub">&#8381;</span>
+              <span class="good-kg">/кг</span>
+            </div>
+            <a href="#" class="good-property">Сливочное с кусочками черного шоколада</a>
           </div>
-          <a href="#" class="good-property">Сливочное с кусочками черного шоколада</a>
-        </div>
-        <div class="good good-box">
-          <div class="good-main"><img src="img/content/mint-cream.png" alt="мятное"></div>
-          <div class="price">
-            <span class="good-price">420</span>
-            <span class="good-rub">&#8381;</span>
-            <span class="good-kg">/кг</span>
+          <div class="good good-box">
+            <div class="good-main"><img src="img/content/mint-cream.png" alt="мятное"></div>
+            <div class="price">
+              <span class="good-price">420</span>
+              <span class="good-rub">&#8381;</span>
+              <span class="good-kg">/кг</span>
+            </div>
+            <a href="#" class="good-property">Сливочное с мятным сиропом</a>
           </div>
-          <a href="#" class="good-property">Сливочное с мятным сиропом</a>
         </div>
       </div>
-    </div>
-    <div class="paginator">
-      <ul>
-        <li><a href="#">1</a></li>
-        <li>2</li>
-        <li><a href="#">3</a></li>
-        <li><a href="#">4</a></li>
-      </ul>
+      <div class="paginator">
+        <ul>
+          <li><a href="#">1</a></li>
+          <li>2</li>
+          <li><a href="#">3</a></li>
+          <li><a href="#">4</a></li>
+        </ul>
+      </div>
     </div>
   </main>
   <!-- Footer -->
